apps/argo/argo-ingress.yaml
# k3s/argo-cd/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo
  namespace: argocd
  annotations:
    # This tells the Tailscale operator what MagicDNS name to use
    tailscale.com/hostname: "argo"
    # This ensures it matches your ACL rules
    tailscale.com/tags: "tag:deployment"
spec:
  # Use the Tailscale Ingress controller directly
  ingressClassName: tailscale
  rules:
  - host: argocd-argo-ingress.moose-amberjack.ts.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
